Change request refactoring